Fixed logo z-index

--- a/src/pages/styles.css
+++ b/src/pages/styles.css
@@ -19,7 +19,7 @@ body{
     height: auto;
     position: fixed;
     top: clamp(12px, 3vh, 24px);
-    z-index: 999999999;
+    z-index: 9999999;
 }
 
 @media (max-width: 1000px) {
